--- a/index.html
+++ b/index.html
@@ -1,4 +1,29 @@
 <!DOCTYPLE html>
 <html>
-Hello World
+<head>
+        <meta charset="utf-8" />
+		<link rel="stylesheet" href="style.css" />
+        <title>Giulio Franzese</title>
+    </head>
+
+    <body>
+	
+		<div id = "init">
+			<h1>Giulio Franzese - Post Doctoral Researcher, EURECOM Data Science Department</h1>
+		</div>
+	
+		<div id = "main">
+		<div id = "menu">
+			<ul>	
+				<li><a href = "index.html">Main</a></li>
+				<li><a href = "CV/cv.html">CV</a></li>
+				</ul>
+		</div>
+	
+		<div id = "content">
+			<p>Welcome to my personal webpage. 
+		
+		</div>
+		</div>
+	</body>
 <html>
