--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 			<ul>	
 				<li><a href = "index.html">Main</a></li>
 				<li><a href = "CV/cv.html">CV</a></li>
-				</ul>
+				<li><a href = "research/research.html">Research</a></li>
+				<li><a href="teaching/teaching.html">Teaching</a></li>
+			</ul>
 		</div>
 	
 		<div id = "content">
