--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -24,33 +24,39 @@
 	<div id = "content">
 	
 		<h2>EURECOM University</h2>
+			<ul>
+				<li> Assistant Professor: Deep Learning  (Prof. Michiardi) AY 2020/2021 </li>
 
 		<h2>Politecnico di Torino</h2>
 			<ul> 
 
-				<li> Assistant Professor:  Signal Theory  (Prof. Galleani/ Prof. Ferrero) Politecnico di Torino- ITALY AY 2021/2022 </li>
+				<li> Assistant Professor:  Signal Theory  (Prof. Galleani/ Prof. Ferrero)  AY 2021/2022 </li>
 
-				<li> Assistant Professor:  Signal Theory  (Prof. Galleani/ Prof. Ferrero) Politecnico di Torino  - ITALY AY 2020/2021 </li>
+				<li> Assistant Professor:  Signal Theory  (Prof. Galleani/ Prof. Ferrero)  AY 2020/2021 </li>
 
-				<li> Assistant Professor:  Signal Theory  (Prof. Galleani/ Prof. Ferrero) Politecnico di Torino  - ITALY AY 2019/2020 </li>
+				<li> Assistant Professor:  Signal Theory  (Prof. Galleani/ Prof. Ferrero)  AY 2019/2020 </li>
 
-				<li> Assistant Professor:  ICT for health  (Prof. Visintin) Politecnico di Torino  - ITALY AY 2018/2019 </li>
+				<li> Assistant Professor:  ICT for health  (Prof. Visintin)  AY 2018/2019 </li>
 
-				<li> Assistant Professor:   Signal Theory  (Prof. Galleani/ Prof. Ferrero) Politecnico di Torino  - ITALY  AY 2018/2019 </li>
+				<li> Assistant Professor:   Signal Theory  (Prof. Galleani/ Prof. Ferrero)   AY 2018/2019 </li>
 
-				<li> Assistant Professor:   Signal Theory  (Prof. Bosco/ Prof. Montorsi) Politecnico di Torino  - ITALY AY 2018/2019 </li>
-
-				<li> Professor: Signal analysis and processing at TTPU Tashkent University- UZBEKISTAN  AY 2017/2018 </li>
+				<li> Assistant Professor:   Signal Theory  (Prof. Bosco/ Prof. Montorsi)  AY 2018/2019 </li>
 
 				<li> Assistant Professor:  Signal Analysis  (Prof Guido Montorsi, Prof Gabriella Bosco) AY 2017/2018 </li>
 
-				<li> Adjunct Professor: Navigation and Related Applications Politecnico di Torino- ITALY AY 2016/2017 </li>
+				<li> Adjunct Professor: Navigation and Related Applications  AY 2016/2017 </li>
 
-				<li> Assistant:  Signal Analysis  (Prof. Gabriella Olmo)Politecnico di Torino  - ITALY AY 2014/2015 </li>
+				<li> Assistant:  Signal Analysis  (Prof. Gabriella Olmo) AY 2014/2015 </li>
 
 
 			</ul>
-	
+
+		<h2>Turin Polytechnic University in Tashkent (UZBEKISTAN) </h2>
+			<ul> 
+
+				<li> Professor: Signal analysis and processing AY 2017/2018 </li>
+
+			</ul>
 				
 		
 	</div>
