--- a/research/research.html
+++ b/research/research.html
@@ -31,39 +31,39 @@
 
 		<h2>Publications</h2>
 			<ul> 	
-				<li> 2022 Giulio Franzese, Simone Rossi, Lixuan Yang, Alessandro Finamore, Dario Rossi, Maurizio Filippone, Pietro Michiardi
-				"A New Look on Diffusion Times for Score-based Generative Models" In ICML 2022 Workshop on Continuous Time Methods for Machine Learning</li>
+				<li> 2022 Giulio Franzese, Simone Rossi, Lixuan Yang, Alessandro Finamore, Dario Rossi, Maurizio Filippone, Pietro Michiardi <br>
+				"A New Look on Diffusion Times for Score-based Generative Models" <br> In ICML 2022 Workshop on Continuous Time Methods for Machine Learning</li>
 
-				<li> 2022 Giulio Franzese, Simone Rossi, Lixuan Yang, Alessandro Finamore, Dario Rossi, Maurizio Filippone, Pietro Michiardi
-				"How Much is Enough? A Study on Diffusion Times in Score-based Generative Models" In arXiv:2206.05173 </li>
+				<li> 2022 Giulio Franzese, Simone Rossi, Lixuan Yang, Alessandro Finamore, Dario Rossi, Maurizio Filippone, Pietro Michiardi <br>
+				"How Much is Enough? A Study on Diffusion Times in Score-based Generative Models" <br>In arXiv:2206.05173 </li>
 
-				<li> 2022 Giulio Franzese, Dimitrios Milios, Maurizio Filippone, Pietro Michiardi . "Revisiting
-				the Effects of Stochasticity for Hamiltonian Samplers". In International Conference on Machine Learning 2022, Baltimore, Maryland USA </li>
+				<li> 2022 Giulio Franzese, Dimitrios Milios, Maurizio Filippone, Pietro Michiardi <br> "Revisiting
+				the Effects of Stochasticity for Hamiltonian Samplers" <br>In International Conference on Machine Learning 2022, Baltimore, Maryland USA </li>
 
-				<li> 2021 Giulio Franzese , Dimitrios Milios, Maurizio Filippone and Pietro Michiardi. "A
-				Scalable Bayesian Sampling Method Based on Stochastic Gradient Descent Isotropization". In Entropy 2021, 23(11), 1426; MDPI </li>
+				<li> 2021 Giulio Franzese , Dimitrios Milios, Maurizio Filippone and Pietro Michiardi <br> "A
+				Scalable Bayesian Sampling Method Based on Stochastic Gradient Descent Isotropization"<br> In Entropy 2021, 23(11), 1426; MDPI </li>
 
-				<li> 2021 Giulio Franzese ,Yiqing Yan, Giuseppe Serra, Ivan D’Onofrio, Raja Appuswamy, Pietro Michiardi. "Generative DNA: Representation Learning for DNA-basedApproximate Image Storage". 
-				In 2021 International Conference on Visual Communications and Image Processing (VCIP), Munich, Germany </li>
+				<li> 2021 Giulio Franzese ,Yiqing Yan, Giuseppe Serra, Ivan D'Onofrio, Raja Appuswamy, Pietro Michiardi <br> "Generative DNA: Representation Learning for DNA-basedApproximate Image Storage"
+				<br>In 2021 International Conference on Visual Communications and Image Processing (VCIP), Munich, Germany </li>
 
-				<li> 2020 Giulio Franzese, Monica Visintin . "Probabilistic Ensemble of Deep Information Networks". In Entropy 2020, 22(1), 100; MDPI </li>
+				<li> 2020 Giulio Franzese, Monica Visintin <br> "Probabilistic Ensemble of Deep Information Networks" <br> In Entropy 2020, 22(1), 100; MDPI </li>
 
 
-				<li> 2020 Giulio Franzese, Nicola Umberto Linty, Fabio Dovis. "Semi-Supervised GNSS scintillations detection based on DeepInfomax". In Applied Sciences 2020, 10(1), 381; </li>
+				<li> 2020 Giulio Franzese, Nicola Umberto Linty, Fabio Dovis <br> "Semi-Supervised GNSS scintillations detection based on DeepInfomax" <br> In Applied Sciences 2020, 10(1), 381; </li>
 
-				<li> 2019 Rosa Candela, Giulio Franzese, Maurizio Filippone, and Pietro Michiardi. "Convergence Analysis of Sparsified Asynchronous SGD". In arXiv:1910.09466 </li>
+				<li> 2019 Rosa Candela, Giulio Franzese, Maurizio Filippone, and Pietro Michiardi <br> "Convergence Analysis of Sparsified Asynchronous SGD" <br> In arXiv:1910.09466 </li>
 
-				<li> 2018 Giulio Franzese, Monica Visintin . "Deep Information Networks". In arXiv:1803.02251 </li>
+				<li> 2018 Giulio Franzese, Monica Visintin <br> "Deep Information Networks" <br> In arXiv:1803.02251 </li>
 
-				<li> 2018 Letizia Lo Presti, Giulio Franzese . "GNSS for Rail Transportation: Challenges and Opportunities". In GNSS for Rail Transportation: Challenges and Opportunities (Springer), pag. 59-86, ISBN 9783319790848 </li>
+				<li> 2018 Letizia Lo Presti, Giulio Franzese <br> "GNSS for Rail Transportation: Challenges and Opportunities" <br> In GNSS for Rail Transportation: Challenges and Opportunities (Springer), pag. 59-86, ISBN 9783319790848 </li>
 
-				<li> 2018 Letizia Lo Presti, Giulio Franzese. "GNSS for Rail Transportation: Challenges and Opportunities". In GNSS for Rail Transportation: Challenges and Opportunities
+				<li> 2018 Letizia Lo Presti, Giulio Franzese <br> "GNSS for Rail Transportation: Challenges and Opportunities" <br> In GNSS for Rail Transportation: Challenges and Opportunities
 				(Springer), pag. 25-58, ISBN 9783319790848 </li>
 
-				<li> 2017 Giulio Franzese, Ilaria Martini, Letizia Lo Presti "A novel Markov Model for the computation of the continuity risk in Maritime applications". 
-				In Proceedings of the 2017 International Technical Meeting of The Institute of Navigation, Monterey, California, US </li>
+				<li> 2017 Giulio Franzese, Ilaria Martini, Letizia Lo Presti <br>"A novel Markov Model for the computation of the continuity risk in Maritime applications"
+				<br> In Proceedings of the 2017 International Technical Meeting of The Institute of Navigation, Monterey, California, US </li>
 
-				<li> 2014 Giulio Franzese, Sabrina Ugazio, Letizia Lo Presti. "LOS/NLOS detection combining adaptive filtering and channel propagation model". In Satellite Navigation Technologies and European Workshop on GNSS Signals and Signal Processing (NAVITEC), 2014, Noordwijk, Netherlands </li>
+				<li> 2014 Giulio Franzese, Sabrina Ugazio, Letizia Lo Presti <br> "LOS/NLOS detection combining adaptive filtering and channel propagation model" <br> In Satellite Navigation Technologies and European Workshop on GNSS Signals and Signal Processing (NAVITEC), 2014, Noordwijk, Netherlands </li>
 
 
 
