--- a/research/research.html
+++ b/research/research.html
@@ -17,7 +17,7 @@
 			<ul>	
 				<li><a href = "../index.html">Main</a></li>
 				<li><a href = "../research/research.html">Research</a></li>
-				<li><a href="teaching.html">Teaching</a></li>
+				<li><a href = "../teaching/teaching.html">Teaching</a></li>
 			</ul>
 		</div>
 	
@@ -25,16 +25,22 @@
 	
 		<h2>About my research interests</h2>
 			<ul>
-				In the past I worked on problems related to Statistical Signal Processing and Satellite Navigation. 
-				My current topics of interest are Generative Modelling, Bayesian Methods for Machine Learning, Stochastic Differential Equations and Montecarlo Integration.
+				In the past I worked on problems related to Statistical Signal Processing and Satellite Navigation. <br>
+				My current topics of interest are linked to Machine Learning, and in particular Generative Modelling and Bayesian Methods. My goal is to carry out methodological and theoretical research. <br>
+				The most recent topics I am investigating are:<br>
+				<ul>
+					<li> Score Based Generative Modelling</li>
+					<li> Stochastic Gradient Markov Chain Montecarlo techniques</li>
+				</ul>
+
 			</ul>
 
 		<h2>Publications</h2>
 			<ul> 	
-				<li> 2022 Giulio Franzese, Simone Rossi, Lixuan Yang, Alessandro Finamore, Dario Rossi, Maurizio Filippone, Pietro Michiardi <br>
+				<li> 2022 Giulio Franzese, Simone Rossi, Lixuan Yang, Alessandro Finamore, Dario Rossi, Maurizio Filippone, Pietro Michiardi
 				"A New Look on Diffusion Times for Score-based Generative Models" <br> In ICML 2022 Workshop on Continuous Time Methods for Machine Learning</li>
 
-				<li> 2022 Giulio Franzese, Simone Rossi, Lixuan Yang, Alessandro Finamore, Dario Rossi, Maurizio Filippone, Pietro Michiardi <br>
+				<li> 2022 Giulio Franzese, Simone Rossi, Lixuan Yang, Alessandro Finamore, Dario Rossi, Maurizio Filippone, Pietro Michiardi
 				"How Much is Enough? A Study on Diffusion Times in Score-based Generative Models" <br>In arXiv:2206.05173 </li>
 
 				<li> 2022 Giulio Franzese, Dimitrios Milios, Maurizio Filippone, Pietro Michiardi "Revisiting
@@ -43,7 +49,7 @@
 				<li> 2021 Giulio Franzese , Dimitrios Milios, Maurizio Filippone and Pietro Michiardi "A
 				Scalable Bayesian Sampling Method Based on Stochastic Gradient Descent Isotropization"<br> In Entropy 2021, 23(11), 1426; MDPI </li>
 
-				<li> 2021 Giulio Franzese ,Yiqing Yan, Giuseppe Serra, Ivan D'Onofrio, Raja Appuswamy, Pietro Michiardi "Generative DNA: Representation Learning for DNA-basedApproximate Image Storage"
+				<li> 2021 Giulio Franzese ,Yiqing Yan, Giuseppe Serra, Ivan D'Onofrio, Raja Appuswamy, Pietro Michiardi "Generative DNA: Representation Learning for DNA-based Approximate Image Storage"
 				<br>In 2021 International Conference on Visual Communications and Image Processing (VCIP), Munich, Germany </li>
 
 				<li> 2020 Giulio Franzese, Monica Visintin "Probabilistic Ensemble of Deep Information Networks" <br> In Entropy 2020, 22(1), 100; MDPI </li>
