--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -17,7 +17,7 @@
 			<ul>	
 				<li><a href = "../index.html">Main</a></li>
 				<li><a href = "../research/research.html">Research</a></li>
-				<li><a href="teaching.html">Teaching</a></li>
+				<li><a href = "../teaching/teaching.html">Teaching</a></li>
 			</ul>
 		</div>
 	
