--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
         
         <div id = "content">
-            <p>Welcome to my personal webpage. 
-            
+            <p>I am Giulio Franzese, a Post Doctoral Researcher in the <a href="https://www.eurecom.fr/en/research/department-data-science"> Data Science Department of EURECOM </a><\br>
+		
         </div>
     </body>
     <html>
