--- a/index.html
+++ b/index.html
@@ -7,32 +7,41 @@
     </head>
 
     <body>
-	
+		<!-- <div style="display: inline-block""> 
+			<img src="profilepic.gif" alt="Flowers in Chania" width="128" height="128">
+		</div> -->
 		<div id = "init">
-			<h1>Giulio Franzese - Post Doctoral Researcher, EURECOM Data Science Department</h1>
+			<h1> Giulio Franzese</h1>
+            		<h1>Post Doctoral Researcher, EURECOM Data Science Department</h1>
+			
 		</div>
 	
 		<div id = "main">
 		<div id = "menu">
 			<ul>	
 				<li><a href = "index.html">Main</a></li>
-				<li><a href = "research/research.html">Research</a></li>
-				<li><a href="teaching/teaching.html">Teaching</a></li>
+				<li><a href = "research.html">Research</a></li>
+				<li><a href="teaching.html">Teaching</a></li>
 			</ul>
 		</div>
 	
 		<div id = "content">
 			<h2>About me</h2>
            			 <ul>
-					I am Giulio Franzese. Since November 2020 I am a Post Doctoral Researcher in the <a href="https://www.eurecom.fr/en/research/department-data-science"> Data Science Department of EURECOM </a>
+					I am Giulio Franzese. Since November 2020 I am a Post Doctoral Researcher in the <a href="https://www.eurecom.fr/en/people/franzese-giulio"> Data Science Department of EURECOM, Biot (France). </a>
             			</ul>
             
             		<h2>Education</h2>
             			<ul>
-					<li> Politecnico di Torino, 2017 - 2021, Ph.D. in Electrical, Electronics And Communications Engineering<\br> Thesis:	Contributions to Efficient Machine Learning}<\li>
-					<li> Politecnico di Torino, 2014 - 2016, Master's Degree in Telecommunications Engineering <\li>	
-					<li> Politecnico di Torino, 2011 - 2014, Bachelor's Degree in Telecommunications Engineering<\li>
-				<\ul>
+					<li> Politecnico di Torino, 2017 - 2021, Ph.D. in Electrical, Electronics And Communications Engineering <br> Thesis:	Contributions to Efficient Machine Learning</li>
+					<li> Politecnico di Torino, 2014 - 2016, Master's Degree in Telecommunications Engineering </li>	
+					<li> Politecnico di Torino, 2011 - 2014, Bachelor's Degree in Telecommunications Engineering</li>
+				</ul>
+            		<h2>Contacts</h2>
+            			<ul>
+					You can contact me at giulio.franzese@eurecom.fr <br>
+					My postal address is Campus SophiaTech, 450 Route des Chappes, 06410 Biot, France		
+				</ul>
 
 			
 		
