--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div id = "main">
 		<div id = "menu">
 			<ul>	
-				<li><a href = "index.html">Main</a></li>
+				<li><a href = "index.html">Home</a></li>
 				<li><a href = "research.html">Research</a></li>
 				<li><a href="teaching.html">Teaching</a></li>
 			</ul>
